<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia !</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Post like</string>
    <string name="description_post_share">Post share</string>
    <string name="description_post_views">Post views</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="save">Save</string>
</resources>